# password-bunker

./: README.md
.github/workflows/: rust.yml
PasswordBunkerUSB/: Cargo.toml  README.md  package.json  tauri.conf.json
PasswordBunkerUSB/public/: index.html  main.js  styles.css
PasswordBunkerUSB/src/: main.rs
