[package]
name = "password-bunker"
version = "1.0.0"
edition = "2021"

[dependencies]
tauri = { version = "1.6", features = ["api-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
aes-gcm-siv = "0.11"
sha2 = "0.10"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }

[build-dependencies]
tauri-build = { version = "1.5", features = [] }